<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/bg"
    android:orientation="vertical">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        android:transitionName="profile" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/username"
            style="@style/loginFields_style"
            android:drawableLeft="@drawable/ic_action_user"
            android:fontFamily="@font/roboto_thin"
            android:hint="@string/username"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/email_signup"
            style="@style/loginFields_style"
            android:drawableLeft="@drawable/ic_action_email"
            android:fontFamily="@font/roboto_thin"
            android:hint="@string/signup_email"
            android:inputType="textEmailAddress"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/password_signup"
            style="@style/loginFields_style"
            android:drawableLeft="@drawable/ic_action_pw"
            android:fontFamily="@font/roboto_thin"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/password_signup2"
            style="@style/loginFields_style"
            android:drawableLeft="@drawable/ic_action_pw"
            android:fontFamily="@font/roboto_thin"
            android:hint="@string/retype_pw"
            android:inputType="textPassword"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/club_checkbox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_light"
            android:text="I am a club"
            android:textColor="@color/white"
            android:buttonTint="@color/white"/>
        <Button
            android:id="@+id/signup_button"
            style="@style/button_style"
            android:onClick="signup_click"
            android:text="@string/signupText"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>