<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/bg"
    android:orientation="vertical">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        android:transitionName="profile" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/email"
            style="@style/loginFields_style"
            android:drawableLeft="@drawable/ic_action_user"
            android:fontFamily="@font/roboto_thin"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/password"
            style="@style/loginFields_style"
            android:drawableLeft="@drawable/ic_action_pw"
            android:fontFamily="@font/roboto_thin"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_light"
            android:text="Remember me"
            android:textColor="@color/white"
            android:buttonTint="@color/white"/>

        <Button
            android:id="@+id/login_button"
            style="@style/button_style"
            android:onClick="login_button_click"
            android:text="@string/login"
            android:textSize="18sp" />

        <Button
            android:id="@+id/forgotpw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="?android:attr/borderlessButtonStyle"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto_light"
            android:onClick="forgotPassword_click"
            android:text="@string/forgotpw"
            android:clickable="true"
            android:textColorLink="@color/login_red"
            android:textAlignment="center"
            android:textColor="@drawable/button_textcolor"
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/signup"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:onClick="signup_click"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@drawable/button_textcolor"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>